webserver/airflow-webserver-deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: airflow-webserver
spec:
  replicas: 1
  selector:
    app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
      - name: airflow-webserver
        image: apache/airflow:2.5.3rc2-python3.7
        command: ["airflow", "webserver"]
        args: ["-p", "8080"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: airflow-dags
          mountPath: /opt/airflow/dags
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
      volumes:
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: dag-pvc
      restartPolicy: Always
